--- a/public/partials/admin/events.html
+++ b/public/partials/admin/events.html
@@ -24,7 +24,7 @@
     <tbody>
     <tr ng-repeat="event in events">
       <td>
-        <a ng-href="/#/admin/event/{{event._id}}" ng-bind="event.name"></a>
+        <a ng-href="/#/admin/event/{{event._id}}" ng-bind="event.title"></a>
       </td>
       <td>
         <button ng-click="viewPage()" class="button small color">view</button>
